# pl0-compiler

./: .gitignore  CMakeLists.txt  LICENSE
include/: Compiler.h  Definition.h  ErrorMessage.h  ErrorMessageManager.h  ForwardIterator.h  Identifier.h  Lexer.h  Operand.h  Operator.h  QuaternionCode.h  QuaternionCodeManager.h  QuaternionCodeOptimizer.h  Token.h  VirtualMachine.h  tools.h
src/: Compiler.cpp  Definition.cpp  ErrorMessage.cpp  ErrorMessageManager.cpp  Identifier.cpp  Lexer.cpp  Operand.cpp  Operator.cpp  QuaternionCode.cpp  QuaternionCodeManager.cpp  QuaternionCodeOptimizer.cpp  Token.cpp  VirtualMachine.cpp  main.cpp  tools.cpp
test/: test.txt  test2.txt  test3.txt
